# plugin-GUI

./: .gitignore  ACKNOWLEDGMENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build_output.txt  build_output2.txt
Resources/PythonSDK/: README.md  pyproject.toml  setup.py
Resources/PythonSDK/snap/: __init__.py  client.py
Source/: AccessClass.cpp  AccessClass.h  AutoUpdater.cpp  AutoUpdater.h  CMakeLists.txt  CoreServices.cpp  CoreServices.h  Main.cpp  MainWindow.cpp  MainWindow.h  SNAPMainWindow.cpp  SNAPMainWindow.h
Source/Audio/: CMakeLists.txt  SNAPAudioComponent.cpp  SNAPAudioComponent.h
Source/Processors/: CMakeLists.txt
Source/Processors/Actions/: CMakeLists.txt
Source/Processors/AudioMonitor/: AudioMonitor.cpp  CMakeLists.txt
Source/Processors/AudioNode/: AudioEditor.cpp  AudioEditor.h  AudioNode.h  CMakeLists.txt
Source/Processors/DataThreads/: CMakeLists.txt
Source/Processors/Dsp/: CMakeLists.txt
Source/Processors/Editors/: CMakeLists.txt  ElectrodeButtons.cpp  GenericEditor.cpp  GenericEditor.h  VisualizerEditor.cpp  VisualizerEditor.h
Source/Processors/EmptyProcessor/: CMakeLists.txt  EmptyProcessorEditor.cpp
Source/Processors/EventTranslator/: CMakeLists.txt  EventTranslator.cpp
Source/Processors/Events/: CMakeLists.txt
Source/Processors/FileReader/: CMakeLists.txt  FileReader.cpp  FileReader.h  FileReaderActions.cpp
Source/Processors/GenericProcessor/: CMakeLists.txt  GenericProcessor.cpp  GenericProcessor.h
Source/Processors/Merger/: CMakeLists.txt  Merger.cpp  MergerEditor.cpp
Source/Processors/MessageCenter/: CMakeLists.txt  MessageCenter.cpp  MessageCenter.h  MessageCenterEditor.cpp
Source/Processors/Parameter/: CMakeLists.txt  Parameter.cpp  ParameterCollection.cpp  ParameterEditor.cpp
Source/Processors/PlaceholderProcessor/: CMakeLists.txt
Source/Processors/PluginManager/: CMakeLists.txt  PluginManager.cpp
Source/Processors/ProcessorGraph/: CMakeLists.txt  ProcessorGraph.cpp  ProcessorGraph.h
Source/Processors/ProcessorManager/: CMakeLists.txt
Source/UI/: CMakeLists.txt  CanvasAnnotation.cpp  CanvasAnnotation.h  ControlPanel.cpp  DefaultConfig.cpp  DefaultConfig.h  EditorViewport.cpp  GraphViewer.cpp  InfoLabel.cpp  InfoLabel.h  MessageWindow.cpp  MessageWindow.h  PluginInstaller.cpp  PluginInstaller.h  PopupComponent.cpp  PopupComponent.h  ProcessorList.cpp  SNAPControlPanel.cpp  SNAPControlPanel.h  SNAPDataViewport.cpp  SNAPDataViewport.h  SNAPEditorViewport.cpp  SNAPEditorViewport.h  SNAPGraphViewer.cpp  SNAPGraphViewer.h  SNAPPluginInstaller.cpp  SNAPPluginInstaller.h  SNAPProcessorList.cpp  SNAPProcessorList.h  SNAPUIComponent.cpp  SNAPUIComponent.h  SplashScreen.cpp  SplashScreen.h  UIComponent.cpp  UIComponent.h
Source/Utils/: CMakeLists.txt  OpenEphysHttpServer.h  PluginManifest.cpp  PluginManifest.h  ProbeInterfaceReader.cpp  ProbeInterfaceReader.h  ProbeManager.cpp  ProbeManager.h
(+104 files in other folders)
