[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "snap-neuro"
version = "0.1.0"
description = "Python SDK for SNAP (Spike Neuro Acquisition Platform) remote control"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "Spike Neuro", email = "support@spikeneuro.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/spikeneuro/snap"
Documentation = "https://github.com/spikeneuro/snap/tree/main/docs"
Repository = "https://github.com/spikeneuro/snap"
Issues = "https://github.com/spikeneuro/snap/issues"
